--- a/demos/CMakeLists.txt
+++ b/demos/CMakeLists.txt
@@ -16,6 +16,7 @@ if (OMPL_BUILD_DEMOS)
   add_ompl_demo(demo_RigidBodyPlanning RigidBodyPlanning.cpp)
   add_ompl_demo(demo_RigidBodyPlanningWithIK RigidBodyPlanningWithIK.cpp)
   add_ompl_demo(demo_RigidBodyPlanningWithControls RigidBodyPlanningWithControls.cpp)
+  add_ompl_demo(demo_RigidBodyPlanningWithSteering RigidBodyPlanningWithSteering.cpp)
   add_ompl_demo(demo_RigidBodyPlanningWithIntegrationAndControls RigidBodyPlanningWithIntegrationAndControls.cpp)
   if (OMPL_ODESOLVER)
       add_ompl_demo(demo_RigidBodyPlanningWithODESolverAndControls RigidBodyPlanningWithODESolverAndControls.cpp)
